# storyboard-cli

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
scripts/: install.sh
src/: main.rs
